@@ -30,6 +30,7 @@
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area1">
+	  <property name="height_request">1</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 	</widget>
 	<packing>
@@ -67,27 +68,6 @@
 		  <property name="homogeneous">False</property>
 		  <property name="row_spacing">4</property>
 		  <property name="column_spacing">8</property>
-
-		  <child>
-		    <widget class="GtkEntry" id="e_encoding">
-		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="editable">True</property>
-		      <property name="visibility">True</property>
-		      <property name="max_length">0</property>
-		      <property name="text">iso8859-15</property>
-		      <property name="has_frame">True</property>
-		      <property name="invisible_char">●</property>
-		      <property name="activates_default">False</property>
-		    </widget>
-		    <packing>
-		      <property name="left_attach">1</property>
-		      <property name="right_attach">2</property>
-		      <property name="top_attach">0</property>
-		      <property name="bottom_attach">1</property>
-		      <property name="y_options"></property>
-		    </packing>
-		  </child>
 
 		  <child>
 		    <widget class="GtkLabel" id="label12">
@@ -339,6 +319,107 @@ Windows/Dos
 		      <property name="right_attach">2</property>
 		      <property name="top_attach">4</property>
 		      <property name="bottom_attach">5</property>
+		      <property name="x_options">fill</property>
+		      <property name="y_options">fill</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkComboBox" id="e_encoding">
+		      <property name="visible">True</property>
+		      <property name="items" translatable="yes">ascii (English)
+big5 (Traditional Chinese)
+big5hkscs (Traditional Chinese)
+cp037 (English)
+cp424 (Hebrew)
+cp437 (English)
+cp500 (Western Europe)
+cp737 (Greek)
+cp775 (Baltic languages)
+cp850 (Western Europe)
+cp852 (Central and Eastern Europe)
+cp855 (Bulgarian, Byelorussian, Macedonian, Russian, Serbian)
+cp856 (Hebrew)
+cp857 (Turkish)
+cp860 (Portuguese)
+cp861 (Icelandic)
+cp862 (Hebrew)
+cp863 (Canadian)
+cp864 (Arabic)
+cp865 (Danish, Norwegian)
+cp866 (Russian)
+cp869 (Greek)
+cp874 (Thai)
+cp875 (Greek)
+cp932 (Japanese)
+cp949 (Korean)
+cp950 (Traditional Chinese)
+cp1006 (Urdu)
+cp1026 (Turkish)
+cp1140 (Western Europe)
+cp1250 (Central and Eastern Europe)
+cp1251 (Bulgarian, Byelorussian, Macedonian, Russian, Serbian)
+cp1252 (Western Europe)
+cp1253 (Greek)
+cp1254 (Turkish)
+cp1255 (Hebrew)
+cp1256 (Arabic)
+cp1257 (Baltic languages)
+cp1258 (Vietnamese)
+euc_jp (Japanese)
+euc_jis_2004 (Japanese)
+euc_jisx0213 (Japanese)
+euc_kr (Korean)
+gb2312 (Simplified Chinese)
+gbk (Unified Chinese)
+gb18030 (Unified Chinese)
+hz (Simplified Chinese)
+iso2022_jp (Japanese)
+iso2022_jp_1 (Japanese)
+iso2022_jp_2 (Japanese, Korean, Simplified Chinese, Western Europe, Greek)
+iso2022_jp_2004 (Japanese)
+iso2022_jp_3 (Japanese)
+iso2022_jp_ext (Japanese)
+iso2022_kr (Korean)
+latin_1 (West Europe)
+iso8859_2 (Central and Eastern Europe)
+iso8859_3 (Esperanto, Maltese)
+iso8859_4 (Baltic languagues)
+iso8859_5 (Bulgarian, Byelorussian, Macedonian, Russian, Serbian)
+iso8859_6 (Arabic)
+iso8859_7 (Greek)
+iso8859_8 (Hebrew)
+iso8859_9 (Turkish)
+iso8859_10 (Nordic languages)
+iso8859_13 (Baltic languages)
+iso8859_14 (Celtic languages)
+iso8859_15 (Western Europe)
+johab (Korean)
+koi8_r (Russian)
+koi8_u (Ukrainian)
+mac_cyrillic (Bulgarian, Byelorussian, Macedonian, Russian, Serbian)
+mac_greek (Greek)
+mac_iceland (Icelandic)
+mac_latin2 (Central and Eastern Europe)
+mac_roman (Western Europe)
+mac_turkish (Turkish)
+ptcp154 (Kazakh)
+shift_jis (Japanese)
+shift_jis_2004 (Japanese)
+shift_jisx0213 (Japanese)
+utf_16 (all languages)
+utf_16_be (all languages (BMP only))
+utf_16_le (all languages (BMP only))
+utf_7 (all languages)
+utf_8 (all languages)</property>
+		      <property name="add_tearoffs">False</property>
+		      <property name="focus_on_click">True</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">0</property>
+		      <property name="bottom_attach">1</property>
 		      <property name="x_options">fill</property>
 		      <property name="y_options">fill</property>
 		    </packing>
