@@ -29,6 +29,10 @@ def delete_movie(self):
 	m_id = None
 	number, m_iter = self.get_maintree_selection()
 	movie = self.db.Movie.get_by(number=number)
+	if movie == None:
+		gutils.error(self,_("You have no movies in your database"), self.widgets['window'])
+		return
+	
 	if int(movie.loaned)==1:
 		gutils.warning(self, msg=_("You can't delete movie while it is loaned."))
 		return False
